@@ -1539,6 +1539,8 @@ endif::[]
 === Fixes
 
 * fix: close parallel consumer on transactional mode when InvalidPidMappingException (#830)
+* fix: support kafka-clients 3.9.0 (#841)
+* fix: Paused consumption across multiple consumers (#857)
 
 == 0.5.3.2
 
